chore: Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,6 @@ Google Inc.
 Codemate Ltd.
 Marvin Trecenio <marvin.trecenio@navagis.com>
 Zandy Billones <zandy.billones@navagis.com>
-Arturo Salazar <ArturoSalazarB16@gmail.com>
+Arturo Salazar <arturosalazarb16@gmail.com>
 Caio Moreira <caio1985@gmail.com>
+Shirwa Mohamed <shirwa99@gmail.com>
